# django-expense-tracker

./: manage.py  pyproject.toml
django_expense_tracker/: settings.py  urls.py
django_expense_tracker2/: asgi.py  settings.py  urls.py  wsgi.py
expenses/: admin.py  models.py  serializers.py  views.py
expenses/migrations/: 0001_initial.py
